--- a/public/special.html
+++ b/public/special.html
@@ -1422,7 +1422,7 @@
             const achievementText = subject.list.length
                 ? subject.list.map((item, idx) => `${idx + 1}. ${item.text}`).join('\n')
                 : '관련 성취기준 정보 없음';
-            const prompt = `너는 특수교육 교사를 돕는 전문가야. 아래 정보를 참고하여 ${subject.name} 교과의 월별 계획을 JSON 배열로 작성해줘.\n\n- 학기: ${currentIepSemester}학기\n- 월 목록: ${monthLabels.join(', ')}\n- 학기 교육목표:\n${semesterGoals.map((goal, idx) => `${idx + 1}. ${goal}`).join('\n')}\n- 참고 성취기준:\n${achievementText}\n\n요구사항:\n1. 학기 교육목표의 핵심을 순서대로 ${monthLabels.length}개의 월별 교육목표로 나누어 제시한다. 필요한 경우 한 문장을 둘로 나누거나 두 문장을 하나로 묶어도 되지만 모든 학기 목표 내용이 월별 목표에 반영되어야 한다.\n2. 각 월별 목표마다 교육내용과 교육방법을 1~2문장으로 작성하고, 모든 문장은 '다.' 또는 '한다.'로 끝나도록 한다.\n3. 교육방법은 활동 중심으로 구체화한다.\n4. 응답은 반드시 JSON 배열만으로 제공하고 다른 설명은 포함하지 않는다.\n5. 배열의 각 요소는 {"month":"${monthLabels[0]}","goal":"...","content":"...","method":"..."} 형식을 따르며, month 값은 월 목록과 정확히 일치하고 순서를 유지해야 한다.`;
+            const prompt = `너는 특수교육 교사를 돕는 전문가야. 아래 정보를 참고하여 ${subject.name} 교과의 월별 계획을 JSON 배열로 작성해줘.\n\n- 학기: ${currentIepSemester}학기\n- 월 목록: ${monthLabels.join(', ')}\n- 학기 교육목표:\n${semesterGoals.map((goal, idx) => `${idx + 1}. ${goal}`).join('\n')}\n- 참고 성취기준:\n${achievementText}\n\n요구사항:\n1. 학기 교육목표의 핵심을 순서대로 ${monthLabels.length}개의 월별 교육목표로 나누어 제시한다. 필요한 경우 문장을 분할하거나 통합하되 모든 학기 목표 내용이 월별 목표에 반영되어야 한다.\n2. 각 월별 계획의 goal, content, method 값은 불릿 포인트 형식의 문자열로 작성한다. 불릿은 반드시 '○ '로 시작하고 문장마다 줄바꿈으로 구분한다.\n3. goal 항목은 2문장 이상, content와 method 항목은 각각 3문장 이상으로 작성한다.\n4. content 항목의 모든 문장은 '하기로.'로 끝나도록 작성한다.\n5. 모든 문장은 자연스러운 한국어로 작성한다.\n6. 응답은 반드시 JSON 배열만으로 제공하고 다른 설명은 포함하지 않는다.\n7. 배열의 각 요소는 {"month":"${monthLabels[0]}","goal":"...","content":"...","method":"..."} 형식을 따르며, month 값은 월 목록과 정확히 일치하고 순서를 유지해야 한다.`;
             const result = await callGemini(prompt, true);
             let plans = [];
             if (Array.isArray(result)) {
@@ -1433,9 +1433,10 @@
             return monthLabels.map((month, idx) => {
                 const plan = plans.find(p => p.month === month) || plans[idx] || {};
                 return {
-                    goal: (plan.goal || '').trim(),
-                    content: (plan.content || '').trim(),
-                    method: (plan.method || '').trim()
+                    goal: formatMonthlyGoalText(plan.goal || ''),
+                    content: formatMonthlyContentText(plan.content || ''),
+                    method: formatMonthlyMethodText(plan.method || ''),
+                    evaluation: ''
                 };
             });
         }
@@ -1481,6 +1482,106 @@
                 .replace(/</g, '&lt;')
                 .replace(/>/g, '&gt;')
                 .replace(/\n/g, '<br>');
+        }
+
+        function splitMonthlySentences(text) {
+            if (!text) return [];
+            const cleaned = text
+                .replace(/\r/g, '\n')
+                .replace(/^\s*[-*•●○]\s*/gm, '')
+                .replace(/^\s*\d+[.)]\s*/gm, '');
+            const newlineParts = cleaned
+                .split(/\n+/)
+                .map(part => part.trim())
+                .filter(Boolean);
+            if (newlineParts.length > 1) {
+                return newlineParts;
+            }
+            const normalized = cleaned.replace(/\s+/g, ' ').trim();
+            if (!normalized) return [];
+            const sentences = [];
+            const regex = /[^.!?]+[.!?]?/g;
+            let match;
+            while ((match = regex.exec(normalized)) !== null) {
+                const sentence = (match[0] || '').trim();
+                if (sentence) sentences.push(sentence);
+            }
+            return sentences.length ? sentences : [normalized];
+        }
+
+        function ensureBulletString(text, { minCount = 1, endingMode = 'period' } = {}) {
+            let sentences = splitMonthlySentences(text);
+            if (sentences.length && sentences.length < minCount) {
+                const expanded = [];
+                sentences.forEach(sentence => {
+                    const fragments = sentence
+                        .split(/[,;·]/)
+                        .map(fragment => fragment.trim())
+                        .filter(fragment => fragment.length > 0);
+                    if (fragments.length > 1) {
+                        expanded.push(...fragments);
+                    } else {
+                        expanded.push(sentence);
+                    }
+                });
+                if (expanded.length > sentences.length) {
+                    sentences = expanded;
+                }
+            }
+            const bullets = sentences.map(sentence => {
+                let trimmed = sentence.trim();
+                trimmed = trimmed.replace(/^[-*•●○]\s*/, '').replace(/^\d+[.)]\s*/, '').trim();
+                trimmed = trimmed.replace(/\s+/g, ' ');
+                if (!trimmed) return null;
+                if (endingMode === 'hagiro') {
+                    trimmed = trimmed.replace(/[.!?]\s*$/, '');
+                    trimmed = trimmed.replace(/하기로\s*(?:한다|합니다|함|할 예정이다|할 계획이다|할 예정임|할 계획임)?$/, '하기로');
+                    if (!trimmed.endsWith('하기로')) {
+                        trimmed += '하기로';
+                    }
+                    trimmed = `${trimmed}.`;
+                } else {
+                    trimmed = trimmed.replace(/[.!?]\s*$/, '');
+                    trimmed = `${trimmed}.`;
+                }
+                return `○ ${trimmed}`;
+            }).filter(Boolean);
+
+            if (!bullets.length) {
+                let fallback = (text || '').replace(/^\s*[-*•●○]\s*/gm, '').trim();
+                if (!fallback) return '';
+                fallback = fallback.replace(/[.!?]\s*$/, '');
+                fallback = fallback.replace(/\s+/g, ' ');
+                if (endingMode === 'hagiro') {
+                    fallback = fallback.replace(/하기로\s*(?:한다|합니다|함|할 예정이다|할 계획이다|할 예정임|할 계획임)?$/, '하기로');
+                    if (!fallback.endsWith('하기로')) {
+                        fallback += '하기로';
+                    }
+                }
+                const sentence = `${fallback}.`;
+                const bulletLine = `○ ${sentence}`;
+                return Array.from({ length: Math.max(minCount, 1) }, () => bulletLine).join('\n');
+            }
+
+            if (bullets.length < minCount) {
+                const last = bullets[bullets.length - 1];
+                while (bullets.length < minCount) {
+                    bullets.push(last);
+                }
+            }
+            return bullets.join('\n');
+        }
+
+        function formatMonthlyGoalText(text) {
+            return ensureBulletString(text, { minCount: 2, endingMode: 'period' });
+        }
+
+        function formatMonthlyContentText(text) {
+            return ensureBulletString(text, { minCount: 3, endingMode: 'hagiro' });
+        }
+
+        function formatMonthlyMethodText(text) {
+            return ensureBulletString(text, { minCount: 3, endingMode: 'period' });
         }
 
         function extractSemesterGoalsFromDom() {
