--- a/public/special.html
+++ b/public/special.html
@@ -1298,7 +1298,7 @@
             pdfContainer.style.width = '210mm';
             pdfContainer.style.backgroundColor = '#ffffff';
             pdfContainer.style.pointerEvents = 'none';
-            pdfContainer.style.opacity = '0';
+            pdfContainer.style.zIndex = '-1';
 
             const style = document.createElement('style');
             style.textContent = styleText;
