Fix elementary grade filter values

--- a/public/special.html
+++ b/public/special.html
@@ -886,9 +886,9 @@
             if (level === 'elementary') {
                 options = [
                     { value: 'all', label: '전체' },
-                    { value: '1-2학년', label: '1-2학년' },
-                    { value: '3-4학년', label: '3-4학년' },
-                    { value: '5-6학년', label: '5-6학년' },
+                    { value: '1-2', label: '1-2학년' },
+                    { value: '3-4', label: '3-4학년' },
+                    { value: '5-6', label: '5-6학년' },
                 ];
             } else {
                 options = [
